public interface Creature{
	void Interaction(Explorer _Player);
}
