public class Object {
	public String name;
	public int effect;
	public int price;

	Object(){

	}

	Object(String _name, int _effect){
		name = _name;
		effect =_effect;
	}
}


