public class Raider extends Enemy{
	Raider(String _name, int _baseDamage, int _health, int _money){
		SetName(_name);
		setBaseDamage(_baseDamage);
		setHealth(_health);
		setMoney(_money);
	}
}
